WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264760
Register assertion invalidation callbacks
https://bugs.webkit.org/show_bug.cgi?id=264760
Summary
Register assertion invalidation callbacks
Per Arne Vollan
Reported
2023-11-13 11:53:29 PST
Register assertion invalidation callbacks
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-13 11:53:52 PST
<
rdar://problem/118347404
>
Per Arne Vollan
Comment 2
2023-11-13 19:46:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20457
EWS
Comment 3
2023-11-17 07:27:54 PST
Committed
270889@main
(295b9ce46fcb): <
https://commits.webkit.org/270889@main
> Reviewed commits have been landed. Closing PR #20457 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug