Register assertion invalidation callbacks https://bugs.webkit.org/show_bug.cgi?id=264760 rdar://118347404

Reviewed by Brent Fulgham.

Add environment identifier and register assertion invalidation callbacks for capabilities.

* Source/WebKit/Platform/spi/Cocoa/ExtensionKitSPI.h:
* Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
(WebKit::ProcessAssertion::ProcessAssertion):

Canonical link: https://commits.webkit.org/270889@main